[package]
name = "critic"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

critic_sys = { path = "./critic_sys" }
linkme = "0.3.3"
parking_lot = "0.12.1"
rayon = "1.5.3"
uuid = { version = "1.1.2", features = ["v4"] }

[workspace]
members = ["critic_sys"]
